fixed header layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -23042,10 +23042,6 @@ ol.commentlist li .star-rating {
 }
 
 @media only screen and (max-width: 768px) {
-	#mobile-side-drawer {
-		min-height: 60px;
-	}
-
 	.header-style-4 .header-2-nav {
 		padding-top: 23px;
 	}
@@ -23054,6 +23050,9 @@ ol.commentlist li .star-rating {
 	}
 	.header-style-4 .social-icons {
 		display: block;
-		margin-left: 28px;
+		margin-left: 5px;
 	}
+	.navbar-toggler {
+    	margin-top: 25px;
+  	}
 }
